--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,10 @@ services:
       image: nginx
       container_name: nginx
       hostname: nginx
+      volumes:
+        - "./html:/var/www/html/"
+        - "./servers:/etc/nginx/conf.d/servers"
       ports:
         - "80:80"
+        - "8080:8080"
+        - "8888:8888"
