--- a/servers/alura.conf
+++ b/servers/alura.conf
@@ -1,6 +1,6 @@
 server {
     listen           8888;
-    listen      [::]:8888;
+    #listen      [::]:8888;
     server_name localhost;
 
     location / {
