paginas de erro

--- a/servers/novo.conf
+++ b/servers/novo.conf
@@ -9,4 +9,5 @@ server {
         root   /var/www/html/teste;
         index  index.html index.htm;
     }
+    error_page 404 400 401 /erro.html;
 }
