--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,10 +8,13 @@ services:
       hostname: nginx
       #command: chown -R nginx:nginx /var/lib/nginx
       volumes:
-      #  - "./html:/var/www/html/"
+        - ./html:/usr/share/nginx/html
         - ./templates/nginx.conf:/etc/nginx/nginx.conf
+        - ./servers:/etc/nginx/modules-enabled/
       ports:
         - "80:80"
+        - "8001:8001"
+        - "8002:8002"
       networks:
         - node-teste
       depends_on:
