--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -1,7 +1,7 @@
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+
 
 events {
     worker_connections 1024;
@@ -17,5 +17,17 @@ http {
         proxy_pass          http://laravel:8000;
         proxy_set_header    X-Forwarded-For $remote_addr;
         }
+
+    location /servico1 {
+        proxy_pass          http://localhost:8001/;
+        proxy_set_header    X-Forwarded-For $remote_addr;
+        }
+
+    location /servico2 {
+        proxy_pass          http://localhost:8002/;
+        proxy_set_header    X-Forwarded-For $remote_addr;
+        }                
     }
+
+    include /etc/nginx/modules-enabled/*.conf;
 }
