--- a/servers/default.conf
+++ b/servers/default.conf
@@ -3,6 +3,7 @@ server {
     listen            8001;
     listen       [::]:8001;
     server_name  localhost;
+    access_log   /usr/share/nginx/logs/servico1.log;
 
     location / {
         root   /usr/share/nginx/html/servico1;
@@ -17,6 +18,7 @@ server {
     listen            8002;
     listen       [::]:8002;
     server_name  localhost;
+    access_log   /usr/share/nginx/logs/servico2.log;
 
     location / {
         root   /usr/share/nginx/html/servico2;
