--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -9,6 +9,12 @@ events {
 
 http {
 
+    log_format main '$remote_addr - $remote_user [$time_local] '
+                    '"$request" $status $body_bytes_sent '
+                    '"$http_referer" "$http_user_agent" "$gzip_ratio"';
+
+    #access_log logs/access;log main;
+
     server {
     listen 80;
     server_name localhost 127.0.0.1;
