formatando os logs

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -9,9 +9,14 @@ events {
 
 http {
 
-    log_format main '$remote_addr - $remote_user [$time_local] '
-                    '"$request" $status $body_bytes_sent '
-                    '"$http_referer" "$http_user_agent" "$gzip_ratio"';
+    log_format main 'Remote Addr: $remote_addr, Time: [$time_local], '
+                    'Request: "$request", Status: $status';
+
+    #                   Versao Original
+    #
+    #log_format main '$remote_addr - $remote_user [$time_local] '
+    #                '"$request" $status $body_bytes_sent '
+    #                '"$http_referer" "$http_user_agent" "$gzip_ratio"';                   
 
     #access_log logs/access;log main;
 
