corrigindo os logs para pegar o ip real

--- a/servers/load-balancer.conf
+++ b/servers/load-balancer.conf
@@ -9,10 +9,12 @@ server {
     listen            8003;
     listen       [::]:8003;
     server_name  localhost;
+
     access_log   /usr/share/nginx/logs/load-balancer.log;
 
     location / {
         proxy_pass http://servicos;
+        proxy_set_header REMOTE_ADDR $http_x_real_ip;
     }
 
     error_page   400 401 403 404  /server_error.html;
