--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -9,7 +9,7 @@ events {
 
 http {
 
-    log_format main 'Remote Addr: $remote_addr, Time: [$time_local], '
+    log_format main 'Remote Addr: $http_X_Real_IP, Time: [$time_local], '
                     'Request: "$request", Status: $status';
 
     #                   Versao Original
